{
    "name": "PlayerControll",
    "maps": [
        {
            "name": "MovementAxis",
            "id": "8fd24706-e8bc-4c26-bb98-7896427056e0",
            "actions": [
                {
                    "name": "Move",
                    "type": "Button",
                    "id": "d350f533-3f2b-4fe3-8e82-1c7939c36e6a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "2D Vector",
                    "id": "6c80c453-84f1-4378-ae4a-57cee6c64e3d",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "9b24e44b-a440-404f-9309-c3167a00197f",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "9185fc84-c40b-4943-ac8b-68a78e6bc711",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "5af06ac4-f065-4d42-9eac-8fe7c35be7d1",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "c84648f1-9c96-4c96-a6d2-dce3f6be036b",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        },
        {
            "name": "MouseAxis",
            "id": "fca4fffd-9697-4b8e-8f35-c43f476dc888",
            "actions": [
                {
                    "name": "MouseDeltaX",
                    "type": "Value",
                    "id": "5f5c2e55-14f6-4808-be7b-d4a0b3e704bc",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "MouseDeltaY",
                    "type": "Value",
                    "id": "4bb3dadd-9f3f-4725-886f-8ef2f2137e6a",
                    "expectedControlType": "",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "2a116902-b279-44f5-b16e-ba145d31b646",
                    "path": "<Mouse>/delta/x",
                    "interactions": "",
                    "processors": "Scale(factor=0.02)",
                    "groups": "",
                    "action": "MouseDeltaX",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bacaa315-c718-4d81-a06f-b4b95ef29f88",
                    "path": "<Mouse>/delta/y",
                    "interactions": "",
                    "processors": "Scale(factor=0.02)",
                    "groups": "",
                    "action": "MouseDeltaY",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}